--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     </div>
 
                     <div class="home__data">
-                        <h1 class="home__title">Hi, I'am Nishant</h1>
+                        <h1 class="home__title">Hi, I'm Nishant</h1>
                         <h3 class="home__subtitle">Frontend Developer</h3>
                         <p class="home__description">High level experience in frontend development .</p>
                         <a href="#contact" class="button button--flex home__button">
